--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -8,4 +8,10 @@
   background: linear-gradient(180deg, #FCFFDF 0%, #F1FE87 100%);
   border: none;
   color: #272A32;
+  border-radius: 38px;
+	margin-top: 10px ;
+  padding: 13.5px 0;
+  font-size: 15px;
+  width: 90vw;
+  max-width: 327px;
 }
