--- a/src/components/Input/style.css
+++ b/src/components/Input/style.css
@@ -1,6 +1,8 @@
 .input{
-	width: 327px;
-	height: 48px;
 	border-radius: 38px;
 	margin-top: 10px ;
+  padding: 13.5px 0 13.5px 23px;
+  font-size: 15px;
+  width: 90vw;
+  max-width: 327px;
 }
