--- a/src/components/Input/style.css
+++ b/src/components/Input/style.css
@@ -1,8 +1,10 @@
-.input{
+.input {
 	border-radius: 38px;
-	margin-top: 10px ;
-  padding: 13.5px 0 13.5px 23px;
-  font-size: 15px;
+  padding: 14px 0 14px 24px;
+  font-size: 16px;
   width: 90vw;
   max-width: 327px;
+  outline: none;
+  border: none;
+  color: #ABA9A9;
 }
