--- a/src/components/BigCreditCard/style.css
+++ b/src/components/BigCreditCard/style.css
@@ -1,27 +1,84 @@
 .big-creditcard-container {
-  background: linear-gradient(180deg, #EAEAEA 0%, #B2D0CE 100%);
+  background: linear-gradient(180deg, #eaeaea 0%, #b2d0ce 100%);
   height: 184px;
   width: 312px;
   border-radius: 26px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 30px 0px 20px 16px;
+  justify-content: center;
+  padding: 0 30px 20px 30px;
   box-sizing: border-box;
+  flex-direction: column;
+}
+
+.big-creditcard-brand {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.big-creditcard-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 48px;
+  padding: 0 0 24px 0;
+}
+
+.big-creditcard-value {
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 22px;
+}
+
+.big-creditcard-center {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.big-creditcard-due-date-title {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  font-size: 10px;
+  color: #a3aa7e;
+}
+
+.big-creditcard-due-date {
+  display: flex;
+  font-size: 15px;
+  font-weight: 300;
+  font-weight: bold;
+  color: #272a32;
+  margin-left: auto;
+}
+
+.big-creditcard-card-number {
+  display: flex;
+  font-size: 15px;
+  font-weight: 300;
+  font-weight: bold;
+}
+
+.big-creditcard-bottom {
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 14px;
+  color: #a3aa7e;
 }
 
 .big-creditcard-container > svg {
-font-size: 30px;
+  font-size: 30px;
 }
 
 .brand-visa {
-background: linear-gradient(180deg, #FCFFDF 0%, #F1FE87 100%);
+  background: linear-gradient(180deg, #fcffdf 0%, #f1fe87 100%);
 }
 
 .brand-mastercard {
-background: linear-gradient(180deg, #F2EFF4 0%, #B8A9C6 100%);
+  background: linear-gradient(180deg, #f2eff4 0%, #b8a9c6 100%);
 }
 
 .brand-americanexpress {
-background: linear-gradient(180deg, #EAEAEA 0%, #B2D0CE 100%);
+  background: linear-gradient(180deg, #eaeaea 0%, #b2d0ce 100%);
 }
