--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -2,6 +2,12 @@
   background-color: #363339;
   border: none;
   color: #FFFFFF;
+  border-radius: 38px;
+	margin-top: 10px;
+  padding: 13.5px 0;
+  font-size: 15px;
+  width: 90vw;
+  max-width: 327px;
 }
 
 .success-button {
